--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.jpa.open-in-view=false
 spring.data.jpa.repositories.enabled=false
 spring.jdbc.template.enabled=false
 spring.transaction.enabled=false
+server.servlet.session.cookie.same-site=Lax
